TAG: qcreports_db-6-0-23-17
DATE: 04/02/2024
STAFF: lec
wts2-1453/fl2-811/add curation state to existing custom report

TAG: qcreports_db-6-0-23-16
TAG: qcreports_db-6-0-23-15
DATE: 03/29/2024
STAFF: lec
wts2-1155/GOC taking over GOA mouse, GOA human, etc.
wts2-1450/Custom Report for GXD workflow tag
#       new file:   GXD_PriorityTags.py
mgd/GO_Combined_Report.py
mgd/GO_MGIGAF.py
mgd/GO_stats.py
mgd/GO_MGIGAF.py
monthly/MRK_GOSymbolChange.sql
qcgo_reports.csh
qcr.shtml
qcweekly_reports.csh

TAG: qcreports_db-6-0-23-14
DATE: 03/25/2024
STAFF: lec
wts2-1447/Lit triage: journals x year of publication (QC report to track journal usage in the MasterBib)
wts2-1448/Lit triage: journals x curatorial group (QC reports to track journal usage by group)
wts2-1449/Lit triage: journals' keep/discard numbers
#       new file:   monthly/BIB_JournalByYear.py
#       new file:   monthly/BIB_JournalByGroupYear.py
#       new file:   monthly/BIB_JournalByYearKD.py

TAG: qcreports_db-6-0-23-13
TAG: qcreports_db-6-0-23-12
DATE: 03/19/2024
STAFF: lec
wts2-1441/fl3-787/custom report listing HT Experiment Notes for experiments whose curation status = done

TAG: qcreports_db-6-0-23-11
TAG: qcreports_db-6-0-23-10
DATE: 03/14/2024
STAFF: lec
wts2-1439/fl2-784/HT/remove Raw Sample Count from PWI & QC
undo:
wts2-1430/fl2-778/add column to existing GXD_HTOverview

TAG: qcreports_db-6-0-23-9
DATE: 03/13/2024
STAFF: lec
wts2-1437/fl2-780/missing QC report 'New PubMed2Gene References for markers with no literature MP annot'
weird/looks ok on master/qcr.shtml

TAG: qcreports_db-6-0-23-8
DATE: 03/12/2024
STAFF: lec
wts2-1430/fl2-778/add column to existing GXD_HTOverview

TAG: qcreports_db-6-0-23-7
TAG: qcreports_db-6-0-23-6
DATE: 03/11/2024
STAFF: lec
wts2-1429/fl2-777/re-add weekly/BIB_Duplicates.sql

TAG: qcreports_db-6-0-23-5
TAG: qcreports_db-6-0-23-4
DATE: 03/1/2024
STAFF: lec
wts2-1419/fl2-761/Alicia Valenzuela QC, etc.
wts2-1421/obsolete QC reports
#       deleted:    mgd/PRB_Strain5.py